--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -114,17 +114,9 @@ jobs:
       - name: 'Clone repo in deployment directory'
         id: Checkout_Repo
         if: ${{ steps.Deployment_Directory.outcome == 'success' }} && success()
-        shell: bash
         run: |
-          ssh rd_test '
-          if [ 1>0 ]; then
-            echo "Performing git checkout..."
-            cd /home/ubuntu/sunny/
-            sudo git clone git@github.com-repo-Invideo_task_aws:Shashankreddysunkara/Invideo_task_aws.git
-          else
-            sudo git pull origin dev
-            exit
-          fi '
+          ssh rd_test ' if [ true ]; then echo "Performing git checkout..." ; cd /home/ubuntu/sunny/ ;
+          sudo git clone git@github.com-repo-Invideo_task_aws:Shashankreddysunkara/Invideo_task_aws.git ; else cd /home/ubuntu/sunny/Invideo_task_aws/ && sudo git pull origin dev; fi'
         continue-on-error: ${{ fromJSON(env.continue) }}
         timeout-minutes: ${{ fromJSON(env.time) }}
         env:
