--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -116,7 +116,7 @@ jobs:
         if: ${{ steps.Deployment_Directory.outcome == 'success' }} && success()
         run: |
           ssh rd_test ' if [ true ]; then echo "Performing git checkout..." ; cd /home/ubuntu/sunny/ ;
-          sudo git clone git@github.com-repo-Invideo_task_aws:Shashankreddysunkara/Invideo_task_aws.git ; else cd /home/ubuntu/sunny/Invideo_task_aws/ && sudo git pull origin dev; fi'
+          sudo git clone git@github.com-repo-Invideo_task_aws:Shashankreddysunkara/Invideo_task_aws.git ; else cd /home/ubuntu/sunny/Invideo_task_aws/ && sudo git pull origin dev; exit fi'
         continue-on-error: ${{ fromJSON(env.continue) }}
         timeout-minutes: ${{ fromJSON(env.time) }}
         env:
@@ -160,7 +160,7 @@ jobs:
           color: danger
 
   Git_Branch_Checkout:
-    needs: [Deployment_Directory]
+    needs: [Checkout_Repo]
     if: success()
     runs-on: self-hosted
     steps:
