--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -116,9 +116,11 @@ jobs:
         if: ${{ steps.Deployment_Directory.outcome == 'success' }} && success()
         run: |
            if [ true ]; then
-              echo "Performing git checkout..." ; cd /home/ubuntu/sunny/ ; sudo git clone git@github.com-repo-Invideo_task_aws:Shashankreddysunkara/Invideo_task_aws.git ;
-           else
+              echo "Performing git checkout..." ; cd /home/ubuntu/sunny/ ; sudo git clone git@github.com-repo-Invideo_task_aws:Shashankreddysunkara/Invideo_task_aws.git;
+           elseif [ true ] ; then
               cd /home/ubuntu/sunny/Invideo_task_aws/ && sudo git pull origin dev;
+           else
+              exit 1;
            fi
         continue-on-error: ${{ fromJSON(env.continue) }}
         timeout-minutes: ${{ fromJSON(env.time) }}
