--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -115,9 +115,10 @@ jobs:
         id: Checkout_Repo
         if: ${{ steps.Deployment_Directory.outcome == 'success' }} && success()
         run: |
-           if [ true ]; then
+           cd /home/ubuntu/sunny/
+           if ! [ ls -lrt | grep Invideo_task_aws ]; then
               echo "Performing git checkout..." ; cd /home/ubuntu/sunny/ ; sudo git clone git@github.com-repo-Invideo_task_aws:Shashankreddysunkara/Invideo_task_aws.git;
-           elif [ true ] ; then
+           elif [ ls -lrt | grep Invideo_task_aws ] ; then
               echo "Repo already exists. Performing git pull origin dev..." ; cd /home/ubuntu/sunny/Invideo_task_aws/ ; sudo git pull origin dev;
            else
               exit 1;
