--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -116,10 +116,12 @@ jobs:
         if: ${{ steps.Deployment_Directory.outcome == 'success' }} && success()
         shell: bash
         run: |
-           if ! [ grep -q -e "Invideo_task_aws" /home/ubuntu/sunny/ ] ; then
-              echo "Performing git checkout..." ; cd /home/ubuntu/sunny/ ; sudo git clone git@github.com-repo-Invideo_task_aws:Shashankreddysunkara/Invideo_task_aws.git;
-           elif [ grep -q -e "Invideo_task_aws" /home/ubuntu/sunny/ ] ; then
-              echo "Repo already exists. Performing git pull origin dev..." ; cd /home/ubuntu/sunny/Invideo_task_aws/ ; sudo git pull origin dev;
+           if ! grep -q -e "Invideo_task_aws" /home/ubuntu/sunny/ ; then
+              echo "Performing git checkout..."
+              cd /home/ubuntu/sunny/
+              sudo git clone git@github.com-repo-Invideo_task_aws:Shashankreddysunkara/Invideo_task_aws.git
+           elif grep -q -e "Invideo_task_aws" /home/ubuntu/sunny/ ; then
+              echo "Repo already exists. Performing git pull origin dev..." ; cd /home/ubuntu/sunny/Invideo_task_aws/ ; sudo git pull origin dev
            else
               exit;
            fi
