--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -6,7 +6,7 @@ on:
 env:
   CLONE_DIR: /home/ubuntu/sunny/
   continue: false
-  time: 3
+  time: 2
 #inputs:
 #  debug:
 #    required: true
@@ -14,7 +14,6 @@ env:
 #    default: true
 jobs:
   Ansible_Inventory_check:
-    timeout-minutes: 5
     runs-on: self-hosted
     steps:
       - name: Notify slack success
@@ -117,15 +116,15 @@ jobs:
         shell: bash
         run: |
            if ! grep -q -e "Invideo_task_aws" /home/ubuntu/sunny/ ; then
-              echo "Performing git checkout..."
-              cd /home/ubuntu/sunny/
-              sudo git clone git@github.com-repo-Invideo_task_aws:Shashankreddysunkara/Invideo_task_aws.git
+              echo "Performing git checkout...";
+              cd /home/ubuntu/sunny/;
+              sudo git clone git@github.com-repo-Invideo_task_aws:Shashankreddysunkara/Invideo_task_aws.git;
            elif grep -q -e "Invideo_task_aws" /home/ubuntu/sunny/ ; then
               echo "Repo already exists. Performing git pull origin dev..." ; cd /home/ubuntu/sunny/Invideo_task_aws/ ; sudo git pull origin dev
            else
               exit;
            fi
-        continue-on-error: ${{ fromJSON(env.continue) }}
+        continue-on-error: true
         timeout-minutes: ${{ fromJSON(env.time) }}
         env:
           Checkout_Repo_CONTEXT: ${{ toJSON(steps) }}
